# Accounting_and_academic_performance

./: .env  .gitignore  README.md  config.py  loader.py  main.py  pyproject.toml  requirements.txt
data/: behavior.json  users.json
school_bot/: bot.py  database.py  schedule.json  users_db.json
src/: flake8
src/data/: behavior.json  schedule.json  users.json
src/database/: schedule.json  users_db.json
src/handlers/: admin.py  behavior.py  navigation.py  parent.py  registration.py  schedule.py  start.py  teacher.py
src/keyboards/: inline.py
src/states/: registration.py
src/utils/: database.py
tests/: conftest.py  test_handlers.py  test_imports.py  test_logic.py  test_parent.py  test_teacher.py
